# diligent-playground

./: .clang-format  CMakeLists.txt  LICENSE.txt  README.md
src/: CMakeLists.txt  StandardOutSink.h  cgr_error.h  hello.cpp  hello.h  main.cpp
src/shaders/: cube.psh  cube.vsh
